Changed header stying for better responsiveness

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -19,9 +19,9 @@ header {
 
 /* Media Queries */
 
-@media only screen and (min-width: 250px) {
+@media only screen and (min-width: 250px) and (max-width: 999px) {
   header {
-    padding: 0 54px 0 8px;
+    padding: 0 24px 0 8px;
   }
 }
 
@@ -95,6 +95,10 @@ header {
 }
 
 @media only screen and (min-width: 1000px) {
+  header {
+    padding: 0 54px 0 8px;
+  }
+
   #standard {
     display: block;
   }
@@ -106,9 +110,3 @@ header {
     display: none;
   }
 }
-
-// @media only screen and (max-width: 1049px) {
-//   header {
-//     padding: 0 6rem 0 2rem;
-//   }
-// }
