--- a/src/Components/ReusableComponents/ContactForm.scss
+++ b/src/Components/ReusableComponents/ContactForm.scss
@@ -40,6 +40,9 @@ textarea {
   width: 26.5rem;
   border: none;
   transition: var(--transition);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .submit-btn:hover,
@@ -109,34 +112,113 @@ form {
 
 @media only screen and (min-width: 300px) and (max-width: 499px) {
   .contact-form {
-    .left-side,
-    .right-side,
-    .submit-btn {
-      width: 80vw;
-    }
-  }
+    form {
+      gap: 22px;
 
-  input,
-  .submit-btn {
-    height: 32px;
-    font-size: 10px;
+      .left-side,
+      .right-side,
+      .submit-btn {
+        width: 80vw;
+      }
+
+      .email-textbox,
+      .name-textbox {
+        margin-bottom: 22px;
+      }
+
+      input,
+      .submit-btn {
+        height: 32px;
+        font-size: 10px;
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 499px) {
   .contact-form {
-    background-color: var(--bg-color);
-    width: 100vw;
     padding: 0 36px;
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 699px) {
+  .contact-form {
+    padding: 0 72px;
 
     form {
-      flex-direction: column;
-      gap: 21px;
+      input,
+      .submit-btn {
+        height: 40px;
+        font-size: 12px;
+      }
+
+      .left-side,
+      .right-side,
+      .submit-btn {
+        width: 75vw;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 999px) {
+  .contact-form {
+    form {
+      gap: 40px;
 
       .email-textbox,
       .name-textbox {
-        margin-bottom: 21px;
+        margin-bottom: 40px;
       }
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 899px) {
+  .contact-form {
+    padding: 0 80px;
+
+    form {
+      .left-side,
+      .right-side,
+      .submit-btn {
+        width: 80vw;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 999px) {
+  form {
+    input,
+    .submit-btn {
+      height: 48px;
+      font-size: 14px;
+    }
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 999px) {
+  .contact-form {
+    padding: 0 88px;
+
+    form {
+      .left-side,
+      .right-side,
+      .submit-btn {
+        width: 82vw;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 999px) {
+  .contact-form {
+    background-color: var(--bg-color);
+    width: 100vw;
+
+    form {
+      flex-direction: column;
     }
 
     input,
