--- a/src/Components/TestimonialsSection/TestimonialsSection2.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection2.scss
@@ -42,10 +42,6 @@
     //   margin-top: 200px;
     //   margin-bottom: 200px;
     // }
-    // @media (max-width: 500px) {
-    //   margin-top: 50px;
-    //   margin-bottom: 0;
-    // }
 
     // @include mobile {
     //   height: 100vh;
@@ -78,6 +74,13 @@
           // margin-top: 200px;
           // margin-bottom: 200px;
         }
+        @media (max-width: 800px) {
+          height: 500px;
+        }
+        @media (max-width: 500px) {
+          border: none;
+        }
+
         .border {
           position: absolute;
           background: var(--bg-lightest);
@@ -85,6 +88,9 @@
           top: 0;
           width: 55%;
           height: 8px;
+          @media (max-width: 500px) {
+            display: none;
+          }
         }
 
         .text-side {
@@ -99,6 +105,9 @@
           position: relative;
           @media (max-width: 1200px) {
             width: 59rem;
+          }
+          @media (max-width: 500px) {
+            width: 100rem;
           }
 
           .quote {
@@ -217,7 +226,8 @@
         img {
           display: block;
           height: 100%;
-          @media (max-width: 1200px) {
+          @media (max-width: 500px) {
+            display: none;
           }
         }
       }
