--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -33,6 +33,12 @@
 
 // Media Queries
 
+@media (max-width: 999px) {
+  .about-divider {
+    top: 33rem;
+  }
+}
+
 @media only screen and (min-width: 1700px) and (max-width: 2099px) {
   .hero-divider {
     transform: rotate(-4deg);
