Utilized the Page Heading component in the home page sections

--- a/src/Components/ReusableComponents/ServicesCards.scss
+++ b/src/Components/ReusableComponents/ServicesCards.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   gap: 2em;
+  margin-top: 208px;
   @media (max-width: 598px) {
     flex-direction: column;
     gap: 4em;
