--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -2,31 +2,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  // position: relative;
   flex-direction: column;
-  height: 150vh;
+  height: 175vh;
   width: 100vw;
 
   .heading {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
-    // position: absolute;
-    // top: 10%;
     width: 70%;
     text-align: center;
     height: 500px;
   }
-  // .border-breaker {
-  //   width: 70.2rem;
-  //   height: 1.6rem;
-  //   background-color: var(--bg-color);
-  //   position: absolute;
-  //   top: 286rem;
-  //   left: 60rem;
-  //   z-index: 5;
-  // }
+
   .slider {
     padding: 40rem 0;
     height: 450px;
@@ -34,7 +21,6 @@
     position: absolute;
     left: 0;
     margin-top: 25px;
-    // transition: all 1s ease-out;
 
     .testimonial-container {
       width: 100vw;
@@ -72,7 +58,6 @@
           height: 100%;
           display: flex;
           align-items: center;
-          // justify-content: space-between;
           flex-direction: column;
           gap: 12rem;
           width: 66.5rem;
@@ -83,9 +68,7 @@
             height: 80%;
             display: flex;
             flex-direction: column;
-            // justify-content: space-between;
             padding-left: 20px;
-            // gap: 8.8em;
 
             .testimonial-author {
               font-size: 4rem;
@@ -102,31 +85,7 @@
               line-height: 150%;
               text-align: left;
               z-index: 1;
-              // display: -webkit-box;
-              // -webkit-line-clamp: 12;
-              // -webkit-box-orient: vertical;
-              // overflow: hidden;
-              // text-overflow: ellipsis;
             }
-            // .left-par,
-            // .right-par {
-            //   font-family: "Catamaran", sans-serif;
-            //   color: var(--white);
-            //   font-size: 6.9rem;
-            //   // font-weight: bold;
-            //   position: absolute;
-            // }
-
-            // .left-par {
-            //   top: 2.3rem;
-            //   left: 1rem;
-            //   transform: rotate(180deg);
-            // }
-
-            // .right-par {
-            //   top: 6.1rem;
-            //   left: 9.5rem;
-            // }
           }
           .slide-controls {
             display: flex;
@@ -136,8 +95,6 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            // padding-left: 30px;
-            // padding-bottom: 20px;
             padding: 20px;
             width: 20vw;
 
@@ -156,12 +113,6 @@
             svg {
               width: 5.6em;
               height: 5.6em;
-            }
-            .next-arrow {
-              fill: var(--white);
-            }
-
-            .prev-arrow {
               fill: var(--bg-lightest);
             }
           }
@@ -169,7 +120,6 @@
       }
 
       .img-side {
-        // flex: 7;
         height: 90%;
         width: 76%;
         display: flex;
@@ -185,6 +135,10 @@
       }
     }
   }
+}
+
+.fill {
+  fill: var(--white) !important;
 }
 
 /* Media Queries */
@@ -219,9 +173,14 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 599px) {
   .testimonials-section {
+    height: 100vh;
+
     .slider {
+      padding: 32rem 0;
+      margin-top: 0;
+
       .testimonial-container {
         .testimonial {
           border: none;
@@ -266,48 +225,14 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (min-width: 600px) and (max-width: 1099px) {
   .testimonials-section {
-    height: 90vh;
+    height: 160vh;
   }
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1100px) and (max-width: 1499px) {
   .testimonials-section {
-    height: 100vh;
-  }
-}
-
-// @media (max-width: 650px) {
-//   .slide-controls {
-//     width: 50%;
-//   }
-// }
-
-@media (max-width: 1200px) {
-  .text-side {
-    width: 59rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .text-side {
-    width: 100rem;
-  }
-}
-
-@media (max-width: 1000px) {
-  // margin-top: 200px;
-  // margin-bottom: 200px;
-}
-@media (max-width: 800px) {
-  .testimonial {
-    height: 500px;
-  }
-}
-
-@media (max-width: 500px) {
-  .border {
-    display: none;
+    height: 180vh;
   }
 }
