--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -235,3 +235,132 @@
     height: 180vh;
   }
 }
+
+@media (min-width: 1800px) and (max-width: 2599px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 80vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1800px) and (max-width: 4999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          .text-side {
+            .slide-controls {
+              width: 15vw;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 2600px) and (max-width: 2999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 70vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 3000px) and (max-width: 4999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          padding-top: 88px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 3500px) and (max-width: 3999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 75vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 5000px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          padding-top: 108px;
+          .text-side {
+            .slide-controls {
+              width: 12vw;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 5000px) and (max-width: 5999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 75vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 6000px) and (max-width: 6999px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 70vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 7000px) and (max-width: 8499px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 60vw;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 8500px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          width: 50vw;
+        }
+      }
+    }
+  }
+}
