--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -38,6 +38,11 @@
     top: 33rem;
   }
 }
+@media (max-width: 600px) {
+  .about-divider {
+    // top: 15rem;
+  }
+}
 
 @media only screen and (min-width: 1700px) and (max-width: 2099px) {
   .hero-divider {
