--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -53,7 +53,6 @@
         }
 
         .text-side {
-          // flex: 4;
           height: 100%;
           display: flex;
           align-items: center;
@@ -156,11 +155,6 @@
     }
   }
 }
-// @media (max-width: 900px) {
-//   .testimonials-section {
-//     height: 95vh;
-//   }
-// }
 
 @media (min-width: 400px) and (max-width: 599px) {
   .testimonials-section {
@@ -213,6 +207,17 @@
               width: 70%;
               display: flex;
               justify-content: flex-start;
+              align-items: center;
+
+              svg {
+                width: 20px;
+                height: 20px;
+              }
+
+              .slidenumber {
+                margin-top: -4px;
+                gap: 2px;
+              }
             }
           }
         }
