Fixed layout issues on the home page

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -54,12 +54,6 @@
 
 @media (max-width: 599px) {
   .about-section {
-    margin-top: 8rem;
+    margin-top: 32px;
   }
 }
-
-// @media (max-width: 999px) {
-//   .about-section {
-//     margin-top: 25rem;
-//   }
-// }
