--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -194,6 +194,7 @@
             align-items: flex-start;
             justify-content: space-between;
             gap: 40px;
+            height: fit-content;
             .quote {
               width: 100%;
               .testimonial-text {
