--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -35,20 +35,10 @@
 
 @media (max-width: 599px) {
   .about-divider {
-    top: 17rem;
+    top: 68px;
+    width: 103% !important;
   }
 }
-@media (max-width: 600px) {
-  .about-divider {
-    // top: 15rem;
-  }
-}
-
-// @media (max-width: 999px) {
-//   .about-divider {
-//     top: 33rem;
-//   }
-// }
 
 @media only screen and (min-width: 1700px) and (max-width: 2099px) {
   .hero-divider {
