Updated the testimonials section layout up to 1199px screen widths

--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -296,6 +296,20 @@
   }
 }
 
+@media (min-width: 800px) and (max-width: 1199px) {
+  .testimonials-section {
+    .slider {
+      .testimonial-container {
+        .testimonial {
+          .text-side {
+            width: 56rem;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 1800px) and (max-width: 2599px) {
   .testimonials-section {
     .slider {
