--- a/src/Components/ReusableComponents/ServicesCards.scss
+++ b/src/Components/ReusableComponents/ServicesCards.scss
@@ -3,10 +3,12 @@
   justify-content: center;
   align-items: center;
   gap: 2em;
-  margin-top: 208px;
+  margin-top: 150px;
+  padding-bottom: 150px;
   @media (max-width: 598px) {
     flex-direction: column;
     gap: 4em;
+    margin-top: 100px;
   }
 }
 
@@ -17,6 +19,10 @@
     width: 80em;
     height: 100em;
   }
+  @media (max-width: 400px) {
+    width: 70em;
+    height: 100em;
+  }
 }
 
 .card-img {
@@ -24,6 +30,9 @@
   height: 85%;
   margin-bottom: -3px;
   object-fit: cover;
+  // @media (max-width: 400px) {
+  //   width: 90%;
+  // }
 }
 
 .bridal-img {
