--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -9,6 +9,10 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  @media (max-width: 466px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 // About me img
@@ -21,6 +25,10 @@
   align-items: flex-start;
   margin-bottom: 15%;
   object-fit: cover;
+  @media (max-width: 466px) {
+    width: 90%;
+    height: 100%;
+  }
 }
 
 // Textbox
@@ -30,6 +38,9 @@
   flex-direction: column;
   justify-content: flex-start;
   transform: translateY(-2rem);
+  @media (max-width: 466px) {
+    margin-top: -50px;
+  }
 }
 
 .bio {
@@ -41,6 +52,13 @@
   z-index: 1;
   color: var(--white);
   margin-left: -1rem;
+  @media (max-width: 466px) {
+    width: 85rem;
+    margin-left: 0;
+  }
+  @media (max-width: 388px) {
+    max-width: 280px;
+  }
 }
 
 // Signature
@@ -48,6 +66,13 @@
   width: 50%;
   margin: 2rem 0 0 -10rem;
   transform: rotate(-10deg);
+  @media (max-width: 466px) {
+    margin-left: 150px;
+    margin-top: -20px;
+  }
+  @media (max-width: 388px) {
+    margin-top: 10px;
+  }
 }
 
 /* Media Queries */
