Made changes to the about section mobile phone styling

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -3,13 +3,17 @@
   background-color: #3a3c46;
   padding: 27rem 10.4rem 4rem;
   margin-top: 24rem;
+
+  @media (max-width: 499px) {
+    padding: 108px 42px 16px;
+  }
 }
 
 .about-container {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  @media (max-width: 466px) {
+  @media (max-width: 499px) {
     flex-direction: column;
     align-items: center;
   }
@@ -25,7 +29,7 @@
   align-items: flex-start;
   margin-bottom: 15%;
   object-fit: cover;
-  @media (max-width: 466px) {
+  @media (max-width: 499px) {
     width: 90%;
     height: 100%;
   }
@@ -38,7 +42,7 @@
   flex-direction: column;
   justify-content: flex-start;
   transform: translateY(-2rem);
-  @media (max-width: 466px) {
+  @media (max-width: 499px) {
     margin-top: -50px;
   }
 }
@@ -52,12 +56,24 @@
   z-index: 1;
   color: var(--white);
   margin-left: -1rem;
-  @media (max-width: 466px) {
-    width: 85rem;
-    margin-left: 0;
+  @media (max-width: 349px) {
+    width: 280px;
   }
-  @media (max-width: 388px) {
-    max-width: 280px;
+  @media (min-width: 350px) and (max-width: 399px) {
+    width: 300px;
+  }
+  @media (max-width: 399px) {
+    height: 280px;
+  }
+  @media (min-width: 400px) {
+    font-size: 2rem;
+  }
+  @media (min-width: 400px) and (max-width: 499px) {
+    width: 368px;
+    height: 320px;
+  }
+  @media (max-width: 499px) {
+    margin-left: 0;
   }
 }
 
@@ -66,7 +82,7 @@
   width: 50%;
   margin: 2rem 0 0 -10rem;
   transform: rotate(-10deg);
-  @media (max-width: 466px) {
+  @media (max-width: 499px) {
     margin-left: 150px;
     margin-top: -20px;
   }
