Made changes to the about section styling up to 699px

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -4,8 +4,12 @@
   padding: 27rem 10.4rem 4rem;
   margin-top: 24rem;
 
-  @media (max-width: 499px) {
+  @media (max-width: 599px) {
     padding: 108px 42px 16px;
+  }
+
+  @media (min-width: 600px) and (max-width: 699px) {
+    padding: 108px 38px 16px;
   }
 }
 
@@ -72,8 +76,14 @@
     width: 368px;
     height: 320px;
   }
+  @media (min-width: 400px) and (max-width: 699px) {
+    height: 271px;
+  }
   @media (max-width: 499px) {
     margin-left: 0;
+  }
+  @media (min-width: 600px) and (max-width: 699px) {
+    width: 336px;
   }
 }
 
@@ -82,12 +92,20 @@
   width: 50%;
   margin: 2rem 0 0 -10rem;
   transform: rotate(-10deg);
-  @media (max-width: 499px) {
+  @media (max-width: 388px) {
+    margin-top: 10px;
+  }
+  @media (min-width: 389px) and (max-width: 499px) {
     margin-left: 150px;
     margin-top: -20px;
   }
-  @media (max-width: 388px) {
-    margin-top: 10px;
+  @media (min-width: 500px) and (max-width: 599px) {
+    margin-left: -40px;
+    margin-top: 104px;
+  }
+  @media (min-width: 600px) and (max-width: 699px) {
+    margin-left: -64px;
+    margin-top: 180px;
   }
 }
 
