--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -4,8 +4,12 @@
   padding: 27rem 10.4rem 4rem;
   margin-top: 24rem;
 
-  @media (max-width: 599px) {
-    padding: 48px 42px 16px;
+  @media (max-width: 399px) {
+    padding: 32px 12px;
+  }
+
+  @media (min-width: 400px) and (max-width: 599px) {
+    padding: 48px 24px 16px;
   }
 
   @media (min-width: 600px) and (max-width: 699px) {
@@ -21,11 +25,12 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  @media (max-width: 499px) {
-    flex-direction: column;
+
+  @media (min-width: 500px) {
     align-items: center;
   }
-  @media (min-width: 500px) {
+  @media (max-width: 599px) {
+    flex-direction: column;
     align-items: center;
   }
 }
@@ -40,13 +45,17 @@
   align-items: flex-start;
   margin-bottom: 15%;
   object-fit: cover;
-  @media (max-width: 499px) {
+  @media (max-width: 399px) {
     width: 90%;
     height: 100%;
   }
-  @media (min-width: 500px) and (max-width: 599px) {
-    height: 320px;
+  @media (min-width: 400px) and (max-width: 599px) {
+    width: 70%;
+    height: 60%;
   }
+  // @media (min-width: 500px) and (max-width: 599px) {
+  //   height: 320px;
+  // }
 }
 
 // Textbox
@@ -56,8 +65,8 @@
   flex-direction: column;
   justify-content: flex-start;
   transform: translateY(-2rem);
-  @media (max-width: 499px) {
-    margin-top: -50px;
+  @media (max-width: 599px) {
+    margin-top: -72px;
   }
 }
 
@@ -70,30 +79,17 @@
   z-index: 1;
   color: var(--white);
   margin-left: -1rem;
-  @media (max-width: 349px) {
-    width: 280px;
-  }
-  @media (min-width: 350px) and (max-width: 399px) {
-    width: 300px;
-  }
+
   @media (max-width: 399px) {
-    height: 280px;
-  }
-  @media (min-width: 400px) {
     font-size: 2rem;
   }
-  @media (min-width: 400px) and (max-width: 499px) {
-    width: 368px;
-    height: 320px;
+  @media (min-width: 400px) and (max-width: 599px) {
+    font-size: 2.3rem;
   }
-  @media (min-width: 400px) and (max-width: 699px) {
-    height: 271px;
-  }
-  @media (max-width: 499px) {
+  @media (max-width: 599px) {
     margin-left: 0;
-  }
-  @media (min-width: 500px) and (max-width: 599px) {
-    width: 280px;
+    width: 100%;
+    height: 100%;
   }
   @media (min-width: 600px) and (max-width: 699px) {
     width: 336px;
@@ -105,19 +101,8 @@
   width: 50%;
   margin: 2rem 0 0 -10rem;
   transform: rotate(-10deg);
-  @media (max-width: 388px) {
-    margin-top: 10px;
-  }
-  @media (min-width: 389px) and (max-width: 499px) {
-    margin-left: 150px;
-    margin-top: -20px;
-  }
-  @media (min-width: 500px) and (max-width: 599px) {
-    margin-left: -40px;
-    margin-top: 104px;
-  }
-  @media (min-width: 600px) and (max-width: 699px) {
-    margin-left: -64px;
-    margin-top: 180px;
+
+  @media (max-width: 999px) {
+    display: none;
   }
 }
