--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -7,17 +7,19 @@
   @media (max-width: 399px) {
     padding: 32px 12px;
   }
-
   @media (min-width: 400px) and (max-width: 599px) {
     padding: 48px 24px 16px;
   }
-
-  @media (min-width: 600px) and (max-width: 699px) {
-    padding: 108px 38px 16px;
-  }
-
-  @media (max-width: 799px) {
+  @media (max-width: 599px) {
     margin-top: 104px;
+  }
+  @media (min-width: 600px) and (max-width: 799px) {
+    padding: 64px 12px 64px 24px;
+    margin-top: 208px;
+  }
+  @media (min-width: 800px) and (max-width: 999px) {
+    padding: 64px 24px;
+    margin-top: 400px;
   }
 }
 
@@ -26,11 +28,11 @@
   align-items: flex-start;
   justify-content: center;
 
-  @media (min-width: 500px) {
-    align-items: center;
-  }
   @media (max-width: 599px) {
     flex-direction: column;
+    align-items: center;
+  }
+  @media (min-width: 800px) {
     align-items: center;
   }
 }
@@ -53,9 +55,17 @@
     width: 70%;
     height: 60%;
   }
-  // @media (min-width: 500px) and (max-width: 599px) {
-  //   height: 320px;
-  // }
+  @media (min-width: 600px) and (max-width: 799px) {
+    width: 48%;
+    height: 50%;
+  }
+  @media (min-width: 600px) and (max-width: 999px) {
+    margin-bottom: 0;
+  }
+  @media (min-width: 800px) and (max-width: 999px) {
+    width: 40%;
+    height: 40%;
+  }
 }
 
 // Textbox
@@ -67,6 +77,9 @@
   transform: translateY(-2rem);
   @media (max-width: 599px) {
     margin-top: -72px;
+  }
+  @media (min-width: 600px) {
+    transform: translateY(0);
   }
 }
 
@@ -86,13 +99,12 @@
   @media (min-width: 400px) and (max-width: 599px) {
     font-size: 2.3rem;
   }
-  @media (max-width: 599px) {
-    margin-left: 0;
+  @media (min-width: 600px) and (max-width: 799px) {
+    font-size: 1.8rem;
+  }
+  @media (max-width: 799px) {
     width: 100%;
     height: 100%;
-  }
-  @media (min-width: 600px) and (max-width: 699px) {
-    width: 336px;
   }
 }
 
