--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -21,6 +21,9 @@
     padding: 64px 24px;
     margin-top: 400px;
   }
+  @media (min-width: 1000px) and (max-width: 1299px) {
+    padding: 18rem 4.8rem 4rem;
+  }
 }
 
 .about-container {
@@ -32,7 +35,7 @@
     flex-direction: column;
     align-items: center;
   }
-  @media (min-width: 800px) {
+  @media (min-width: 800px) and (max-width: 1299px) {
     align-items: center;
   }
 }
@@ -62,7 +65,7 @@
   @media (min-width: 600px) and (max-width: 999px) {
     margin-bottom: 0;
   }
-  @media (min-width: 800px) and (max-width: 999px) {
+  @media (min-width: 800px) and (max-width: 1299px) {
     width: 40%;
     height: 40%;
   }
@@ -78,7 +81,7 @@
   @media (max-width: 599px) {
     margin-top: -72px;
   }
-  @media (min-width: 600px) {
+  @media (min-width: 600px) and (max-width: 1299px) {
     transform: translateY(0);
   }
 }
@@ -102,7 +105,7 @@
   @media (min-width: 600px) and (max-width: 799px) {
     font-size: 1.8rem;
   }
-  @media (max-width: 799px) {
+  @media (max-width: 1299px) {
     width: 100%;
     height: 100%;
   }
@@ -116,5 +119,9 @@
 
   @media (max-width: 999px) {
     display: none;
+  }
+
+  @media (max-width: 1299px) {
+    width: 40%;
   }
 }
