--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -24,6 +24,9 @@
   @media (min-width: 1000px) and (max-width: 1299px) {
     padding: 18rem 4.8rem 4rem;
   }
+  @media (min-width: 5000px) {
+    margin-top: 0;
+  }
 }
 
 .about-container {
@@ -77,12 +80,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  transform: translateY(-2rem);
+
   @media (max-width: 599px) {
     margin-top: -72px;
-  }
-  @media (min-width: 600px) and (max-width: 1299px) {
-    transform: translateY(0);
   }
 }
 
