--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -17,6 +17,12 @@
   @media (max-width: 999px) {
     display: none;
   }
+  @media only screen and (min-width: 1700px) {
+    transform: rotate(-4deg);
+  }
+  @media only screen and (min-width: 1700px) and (max-width: 2099px) {
+    top: -8rem;
+  }
 }
 
 .about-divider {
@@ -26,6 +32,10 @@
 
   @media (max-width: 999px) {
     display: none;
+  }
+  @media (min-width: 5000px) {
+    top: 10rem;
+    transform: rotate(3deg);
   }
 }
 
@@ -41,27 +51,4 @@
 .hero-header {
   position: absolute;
   z-index: 2;
-}
-
-// Media Queries
-
-@media (max-width: 799px) {
-  .about-divider {
-    top: 104px;
-    width: 103% !important;
-    height: 82px;
-  }
-}
-
-@media only screen and (min-width: 1700px) and (max-width: 2099px) {
-  .hero-divider {
-    transform: rotate(-4deg);
-  }
-}
-
-@media only screen and (min-width: 2100px) {
-  .hero-divider {
-    transform: rotate(-4deg);
-    top: -8rem;
-  }
 }
